--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,20 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+html,
+body,
+#app {
+  height: 100%;
 }
 
-html, body, #app, #app>div {
-  height: 100%
+#app > div {
+  height: 100vh;
+}
+
+.ts-nav {
+  flex: 0 0 3.5rem;
+}
+
+.ts-main {
+  flex: auto;
+
+  /* To allow childs to handle their own overflow */
+  overflow: hidden;
 }
